--- a/app/src/main/res/layout/account_list_group.xml
+++ b/app/src/main/res/layout/account_list_group.xml
@@ -16,5 +16,11 @@
         android:textSize="38sp"
         />
 
+    <TextView
+        android:id="@+id/accountDistanceTv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/_10sdp"/>
+
 
 </LinearLayout>
