Home Activity Java Updates

--- a/app/src/main/res/layout/account_list_group_child.xml
+++ b/app/src/main/res/layout/account_list_group_child.xml
@@ -17,5 +17,14 @@
         android:paddingStart="?android:expandableListPreferredChildIndicatorLeft"
         />
 
+    <Button
+        android:id="@+id/actionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Action"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"/>
+
+
 
 </LinearLayout>
